# pyanalysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
pyanalysis/: NCFList.py  data_math.py  datasetMath.py  fileIO.py  find_files.py  git_analysis.py  git_finder.py  pmath.py  pylogger.py  scdiff.py  time_convert.py  utils.py  visual.py  xarr_out.py
pyanalysis.egg-info/: PKG-INFO  SOURCES.txt
pyanalysis/archive/: dump.py  git_analysis.py  output_data.py
tests/: conftest.py  test_datasetMath.py
