[project]
dynamic = ["dependencies"]
name = "pyanalysis"
version = "0.0.2"
authors = [
    {name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"},
]
description = "Standard Library of Useful Python Scripts for Data Analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}